<resources>
    <string name="app_name">Telegram</string>
    <string name="create_group">Create a group</string>
    <string name="create_secret_chat">Create a secret chat</string>
    <string name="create_channel">Create a channel</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="questions_about_telegram">Questions about Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_default">Default user</string>
    <string name="online">Online</string>
    <string name="account">Account</string>
    <string name="phone_number_default">+73952555353</string>
    <string name="press_to_change_phone_number">Press to change your phone number</string>
    <string name="login_default">Greg228</string>
    <string name="press_to_change_login">Press to change your login</string>
    <string name="about_oneself">About oneself</string>
    <string name="write_about_oneself">Write something about oneself a bit</string>
    <string name="change_name">Change name</string>
    <string name="exit">Exit</string>
    <string name="register_image">Enter a code</string>
    <string name="enter_code">Enter a code</string>
    <string name="we_sent_sms_to_you">We sent a SMS with a code to you. Please, check it.</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="your_phone">Your phone</string>
    <string name="enter_correct_phone_number">Enter a corrent phone number!</string>
    <string name="welcome">Welcome to Telegram!</string>
    <string name="enter_your_phone_with_character_in_start">enter your phone with \'+\' character in start.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="name_can_not_be_empty">The name can\'t be empty</string>
    <string name="all_data_has_been_updated">All data has been updated.</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username_can_not_be_empty">Username can\'t be empty.</string>
    <string name="such_username_is_already_busy">Such username is already busy.</string>
    <string name="reading_contacts">reading contacts...</string>
    <string name="enter_a_message">Enter a message</string>
</resources>