<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/imageRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/register_image"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRegisterEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_code"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageRegister" />

    <TextView
        android:id="@+id/textRegisterWeSent"
        style="@style/text_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/we_sent_sms_to_you"
        app:layout_constraintTop_toBottomOf="@+id/textRegisterEnterCode" />


    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/editRegisterInputCode"
        style="@style/editText"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/register_hint_default_code"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegisterWeSent" />


</androidx.constraintlayout.widget.ConstraintLayout>